--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,7 +6,7 @@ name: static-page
 on:
   # Triggers the workflow on push or pull request events but only for the master branch
   push:
-    branches: [ master, next ]
+    branches: [ master ]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -44,4 +44,4 @@ jobs:
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
         publish_dir: ./web-frontend/dist
-        cname: theduckening.earth
+        cname: theduckening.space
