--- a/web-frontend/package.json
+++ b/web-frontend/package.json
@@ -20,6 +20,7 @@
     "v-click-outside": "^3.1.2",
     "vue": "^2.6.10",
     "vue-cookie": "^1.1.4",
+    "vue-cookie-law": "^1.13.3",
     "vue-fullscreen": "^2.1.5",
     "vue-i18n": "^8.0.0",
     "vue-jsonp": "^0.1.8",
